improved naming for ConvertableToStream

--- a/src/locale_en.properties
+++ b/src/locale_en.properties
@@ -74,3 +74,4 @@ organization_builder.input.location.z=location z
 organization_builder.input.location.name=location name
 organization_builder.input.get=Enter %s%s: 
 message.input.error.semicolon=Semicolon is not allowed in the input
+input.null=null
