CSV, JSON and YAML are now supported as possible output formatting of show command.

--- a/src/locale/locale_en.properties
+++ b/src/locale/locale_en.properties
@@ -75,3 +75,4 @@ organization_builder.input.location.name=location name
 organization_builder.input.get=Enter %s%s: 
 message.input.error.semicolon=Semicolon is not allowed in the input
 input.null=null
+message.show.unrecognizable_format=Unrecognizable format. Suppoerted formats are
