--- a/src/localization/localization_en.properties
+++ b/src/localization/localization_en.properties
@@ -17,7 +17,7 @@ command.sum_of_annual_turnover=sum_of_annual_turnover
 command.max_by_full_name=max_by_full_name
 message.help=help : prints all available commands.%n \
 info : prints information about collection (type, initialization date, number of elements).%n \
-show : prints all elements in the collection.%n \
+show : prints all elements in the collection (available options: yaml (default), json, csv).%n \
 add {element} : add new element to the collection.%n \
 update id {element} : updates collection's element by id.%n \
 remove_by_id id : removes element from the collection with the given id.%n \
@@ -34,8 +34,8 @@ max_by_full_name : prints any maximum value.%n
 message.sum_of_annual_turnover=Sum of annual turnover
 message.ask_for_filename=Enter filename
 message.introduction=Program successfully started. Type 'help' to list available commands.
-message.organization_removed=Organization has been removed.
-message.unable_to_remove_organization=Organization has been removed.
+message.organization_removed=Organization has been successfully removed.
+message.unable_to_remove_organization=Organization has not been removed.
 message.organization.modification_canceled=Modification has been canceled.
 message.organization.modification_error=Error while modifying organization! One of the arguments was incorrect!
 organization.info_message=Collection of organizations, initialization date: %s, number of organizations: %d
@@ -75,3 +75,5 @@ organization_builder.input.location.name=location name
 organization_builder.input.get=Enter %s%s: 
 message.input.error.semicolon=Semicolon is not allowed in the input
 input.null=null
+input.nullable=nullable
+message.show.unrecognizable_format=Unrecognizable format. Suppoerted formats are
