Ru localization improved

--- a/src/localization/localization_ru.properties
+++ b/src/localization/localization_ru.properties
@@ -18,9 +18,9 @@ command.max_by_full_name=максимум_по_полному_имени
 message.help=помощь : выводит все доступные команды.%n \
 информация : выводит информацию о коллекции (тип, время инициализации, количество элементов).%n \
 показать : выводит все элементы (варианты вывода: yaml (по умолчанию), json, csv).%n \
-добавить {элемент} : add new element to the collection.%n \
-обновить ключ {элемент} : updates collection's element by id.%n \
-удалить_по_ключу id : removes element from the collection with the given id.%n \
+добавить {элемент} : добавляет новый элемент в коллекцию.%n \
+обновить ключ {элемент} : обновляет элемент коллекции.%n \
+удалить_по_ключу ключ : удаляет элемент с заданным ключом.%n \
 отчистить : отчищает коллекцию.%n \
 сохранить : сохраняет коллекцию в файл.%n \
 исполнить_скрипт имя файла : исполняет команды из заданного файла.%n \
