--- a/src/localization/localization_ru.properties
+++ b/src/localization/localization_ru.properties
@@ -77,3 +77,8 @@ message.input.error.semicolon=Точка запятой не может быть
 input.null=неопределенно
 input.nullable=может быть неопределенно
 message.show.unrecognizable_format=Неопознаный формат. Поддерживаемые форматы
+message.command.failed=Команда завершилась с неизвестной ошибкой
+message.organizations_by_postal_address_removed=Организации с заданным адресом были успешно удалены
+message.organization_modified=Организация была успешно изменена
+message.script_execution.started=Исполнение скрипта началось
+message.exit=Завершение программы
