renaming && application has been split into several files in order to make code more readable

--- a/src/localization/localization_en.properties
+++ b/src/localization/localization_en.properties
@@ -49,7 +49,7 @@ message.collection.add.canceled=Cancelling creation
 message.collection.add.failed=Error while creating organization! One of the arguments was incorrect!
 message.collection.add.max_check_failed=New organization is not maximum, so it won't be added
 message.collection.remove.canceled=Cancelling deletion
-message.file.not_found=File %s not found%n
+message.file.not_found=File %s not found
 message.command.argument_one.need_argument=Command %s requires an argument. Type help to see more information.%n
 message.command.not_recognized=Command %s not recognized. Type help to see available commands.%n
 organization_builder.input.organization_name=organization name
