--- a/src/localization/localization_ru.properties
+++ b/src/localization/localization_ru.properties
@@ -49,7 +49,7 @@ message.collection.add.canceled=Отмена создания
 message.collection.add.failed=Ошибка при создании организации! Один из аргументов оказался неверным!
 message.collection.add.max_check_failed=Организация не максимальна, она не будет добавлена
 message.collection.remove.canceled=Отмена удаления
-message.file.not_found=Файл %s не был найден%n
+message.file.not_found=Файл %s не был найден
 message.command.argument_one.need_argument=Команда %s принимает аргумент. Напишите 'помощь' чтобы узнать подробнее об аргументах команды.%n
 message.command.not_recognized=Команда %s не была опознана. Напишите 'помощь' чтобы узнать подробнее о командах.%n
 organization_builder.input.organization_name=имя организации
