logging, improved communication, authorization

--- a/src/localization/localization_en.properties
+++ b/src/localization/localization_en.properties
@@ -39,7 +39,7 @@ message.organization.modification_error=Error while modifying organization! One 
 organization.info_message=Collection of organizations, initialization date: %s, number of organizations: %d
 message.collection_cleared=Collection has been cleared.
 message.collection.unable_to_save_to_file=Unable to save collection to file
-message.collection.saved_to_file=Collection has been successfully saved to
+message.collection.saved_to_file=Collection has been successfully saved
 message.collection.load.succeed=Collection has been successfully loaded
 message.collection.load.failed=Unable to load collection from
 message.collection.add.succeed=Organization has been added
@@ -83,3 +83,4 @@ message.operation.canceled=Operation has been canceled by the user
 message.organization.error.already_presented=Organization with the same id and type is already presented in the collection
 message.organization.error.key_error=Organization with the given id is not presented in the collection
 message.organization.error.not_found=Organization with the given id is not found
+message.network.error=Unable to connect to the server
