--- a/src/localization/localization_ru.properties
+++ b/src/localization/localization_ru.properties
@@ -43,11 +43,8 @@ message.collection.saved_to_file=Коллекция была успешно со
 message.collection.load.succeed=Коллекция успешно загружена
 message.collection.load.failed=Не удалось загрузить коллекцию
 message.collection.add.succeed=Организация была успешно добавлена
-message.collection.add.failed=Ошибка при создании организации! Один из аргументов оказался неверным!
 message.collection.add.max_check_failed=Организация не максимальна, она не будет добавлена
-message.file.not_found=Файл %s не был найден
-message.command.argument_one.need_argument=Команда %s принимает аргумент. Напишите 'помощь' чтобы узнать подробнее об аргументах команды.%n
-message.command.not_found=Команда не была опознана. Напишите 'помощь' чтобы узнать подробнее о командах.
+message.command.not_found=Команда %s не была опознана. Напишите 'помощь' чтобы узнать подробнее о командах.%n
 organization_builder.input.organization_name=имя организации
 organization_builder.input.coordinate.x=координата x
 organization_builder.input.coordinate.y=координата y
