handle recursive file execution

--- a/src/localization/localization_en.properties
+++ b/src/localization/localization_en.properties
@@ -43,10 +43,7 @@ message.collection.saved_to_file=Collection has been successfully saved
 message.collection.load.succeed=Collection has been successfully loaded
 message.collection.load.failed=Unable to load collection from
 message.collection.add.succeed=Organization has been added
-message.collection.add.failed=Error while creating organization! One of the arguments was incorrect!
 message.collection.add.max_check_failed=New organization is not maximum, so it won't be added
-message.file.not_found=File %s not found
-message.command.argument_one.need_argument=Command %s requires an argument. Type help to see more information.%n
 message.command.not_found=Command %s not recognized. Type help to see available commands.%n
 organization_builder.input.organization_name=organization name
 organization_builder.input.coordinate.x=coordinate x
@@ -84,3 +81,4 @@ message.organization.error.already_presented=Organization with the same id and t
 message.organization.error.key_error=Organization with the given id is not presented in the collection
 message.organization.error.not_found=Organization with the given id is not found
 message.network.error=Unable to connect to the server
+message.file.recursion=File recursive open detected
